// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AVS mismatch card renders correctly when AVS check is disabled 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="avs-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          AVS Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter compares the street number and the post code submitted by the customer against the data on file with the card issuer.
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-1__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Block transactions for mismatched AVS
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-1__help"
          >
            When enabled, the payment will be blocked.
          </p>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          Buyers who can provide the street number and post code on file with the issuing bank are more likely to be the actual account holder. AVS matches, however, are not a guarantee.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AVS mismatch card renders correctly when AVS check is enabled 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="avs-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          AVS Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter compares the street number and the post code submitted by the customer against the data on file with the card issuer.
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-0__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Block transactions for mismatched AVS
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-0__help"
          >
            When enabled, the payment will be blocked.
          </p>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          Buyers who can provide the street number and post code on file with the issuing bank are more likely to be the actual account holder. AVS matches, however, are not a guarantee.
        </p>
      </div>
    </div>
  </div>
</div>
`;
